--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -70,8 +70,10 @@
                         <span class="icon icon-paperclip"></span>
                         Anexar NF-e
                     </label>
-                    <div class="dropzone" id="arquivoUpload">
-                        Arraste ou clique aqui para realizar upload de arquivos
+                    <div id="arquivoNfContainerNf" class="dropzone">
+                        <div class="fallback">
+                            <input type="file" name="fileNfContainerNf" />
+                        </div>
                     </div>
                 </div>
             </div>
