dropzone na importação carga

--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -72,7 +72,7 @@
                     </label>
                     <div id="arquivoNfContainerNf" class="dropzone">
                         <div class="fallback">
-                            <input type="file" name="fileNfContainerNf" />
+                            <input type="file" name="fileNfContainerNf" id="fileTeste" />
                         </div>
                     </div>
                 </div>
